[gd_scene load_steps=8 format=2]

[ext_resource path="res://textures/Effects/hack_right_1.png" type="Texture" id=1]
[ext_resource path="res://textures/Effects/hack_right_2.png" type="Texture" id=2]
[ext_resource path="res://textures/Effects/hack_right_3.png" type="Texture" id=3]
[ext_resource path="res://textures/Effects/hack_right_4.png" type="Texture" id=4]
[ext_resource path="res://Player/hack_side.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.0001
height = 15.9999

[node name="Hack_Side" type="Node2D"]
scale = Vector2( -1, 1 )
script = ExtResource( 5 )

[node name="Slice_Animator" type="AnimatedSprite" parent="."]
position = Vector2( -5, -1 )
frames = SubResource( 1 )
speed_scale = 2.0
playing = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.57079
shape = SubResource( 2 )
[connection signal="frame_changed" from="Slice_Animator" to="." method="_on_Slice_Animator_frame_changed"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
